hphp/hack/test/typecheck/modules/module_properties.php.exp
File "module_properties.php--f.php", line 4, characters 7-7:
You cannot access internal members outside of a module (Typing[4112])
  File "module_properties.php--A.php", line 6, characters 12-14:
  This member is internal
